reset page changed to index page 3

--- a/index.html
+++ b/index.html
@@ -31,11 +31,14 @@
 
         if (error) {
           alert(error.message);
+          console.log(error.message)
         } else {
           alert('Password updated successfully!');
+          console.log('Password updated successfully!')
         }
       } catch (error) {
         alert(error.message);
+        console.log(error.message)
       }
     });
   </script>
