reset page changed to index page 4

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </form>
 
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+  <script src='https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm'></script>
 
   <script>
    const supabaseUrl = 'https://goouehkgxwcbaumspuhy.supabase.co';
