reset page changed to index page 5

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </form>
 
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
-  <script src='https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm'></script>
+  <script src='https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm' type="module" ></script>
 
   <script>
    const supabaseUrl = 'https://goouehkgxwcbaumspuhy.supabase.co';
